# Zephyr_Rtos_Sample

./: Dockerfile  README.md
scripts/st/: west.yml
workspace/: west.yml
workspace/apps/ADC/: CMakeLists.txt  prj.conf
workspace/apps/ADC/boards/: nucleo_f446re.overlay
workspace/apps/ADC/src/: main.c
workspace/apps/Home_Automation/: CMakeLists.txt  prj.conf
workspace/apps/Home_Automation/src/: main.c
workspace/apps/I2C/: CMakeLists.txt  prj.conf
workspace/apps/I2C/src/: main.c
workspace/apps/Interrupt/: CMakeLists.txt  prj.conf
workspace/apps/Interrupt/boards/: dts.overlay
workspace/apps/Interrupt/src/: main.c
workspace/apps/LED_Blink/: CMakeLists.txt  prj.conf
workspace/apps/LED_Blink/src/: main.c
workspace/apps/Mutex/: CMakeLists.txt  prj.conf
workspace/apps/Mutex/src/: main.c
workspace/apps/SPI/: CMakeLists.txt  prj.conf
workspace/apps/SPI/src/: main.c
workspace/apps/Semaphore/: CMakeLists.txt
workspace/apps/Semaphore/src/: main.c
workspace/apps/Thread/: CMakeLists.txt  prj.conf
workspace/apps/Thread/src/: main.c
workspace/apps/UART/: CMakeLists.txt  prj.conf
workspace/apps/UART/src/: main.c
workspace/apps/UART_GPIO/: CMakeLists.txt
workspace/apps/UART_GPIO/src/: main.c
workspace/apps/UART_INTR/: CMakeLists.txt  prj.conf
workspace/apps/UART_INTR/src/: main.c
workspace/apps/UART_Practice/src/: main.c
workspace/apps/ZBUS_Basic/src/: main.c
workspace/apps/ZBUS_Claim_Finish/src/: main.c
workspace/apps/ZBUS_Sample/: CMakeLists.txt
workspace/apps/ZBUS_UART/: CMakeLists.txt  prj.conf
(+4 files in other folders)
